--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "material-design-icons-iconfont": "^6.0.1",
     "tailwindcss": "^1.7.6",
     "vue": "^2.6.11"
   },
